apps/authentik/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: authentik
  labels:
    goldilocks.fairwinds.com/enabled: "true"
